--- a/tests/schema/fail/xml-attr-exclusion.yaml
+++ b/tests/schema/fail/xml-attr-exclusion.yaml
@@ -7,5 +7,5 @@ components:
     Attr:
       type: string
       xml:
-        attribute: true
+        attribute: true      # can't have both `attribute` and `nodeType`
         nodeType: attribute
