--- a/tests/schema/fail/no_containers.yaml
+++ b/tests/schema/fail/no_containers.yaml
@@ -1,6 +1,6 @@
 openapi: 3.2.0
 
-# this example should fail as there are no paths, components or webhooks containers (at least one of which must be present)
+# this example should fail as there are no `paths`, `components` or `webhooks` fields (at least one of which must be present)
 
 info:
   title: API
