Fix missing component names
Co-authored-by: Ralf Handl <ralf.handl@sap.com>

--- a/tests/schema/fail/media-type-enc-item-exclusion.yaml
+++ b/tests/schema/fail/media-type-enc-item-exclusion.yaml
@@ -4,7 +4,8 @@ info:
   version: 1.0.0
 components:
   requestBodies:
-    content:
-      multipart/mixed:
-        encoding: {}
-        itemEncoding: {}
+    encoding-with-itemEncoding-not-allowed:
+      content:
+        multipart/mixed:
+          encoding: {}
+          itemEncoding: {}
