--- a/tests/schema/fail/encoding-enc-prefix-exclusion.yaml
+++ b/tests/schema/fail/encoding-enc-prefix-exclusion.yaml
@@ -4,9 +4,10 @@ info:
   version: 1.0.0
 components:
   requestBodies:
-    content:
-      multipart/mixed:
-        prefixEncoding:
-        - contentType: multipart/mixed
-          encoding: {}
-          itemEncoding: []
+    encoding-with-itemEncoding-not-allowed:
+      content:
+        multipart/mixed:
+          prefixEncoding:
+          - contentType: multipart/mixed
+            encoding: {}
+            itemEncoding: []
