Schema and test coverage of openapi: X.Y
Also remove what looked to be a part of the regex allowing for
"-rcN" suffixes, which are not mentioned in the field definition
at all.

--- a/tests/schema/pass/info-object-example.yaml
+++ b/tests/schema/pass/info-object-example.yaml
@@ -1,5 +1,5 @@
 # including External Documentation Object Example
-openapi: 3.2.0
+openapi: "3.2"
 $self: https://example.com/openapi
 info:
   title: Example Pet Store App
