--- a/tests/schema/pass/parameter-object-examples.yaml
+++ b/tests/schema/pass/parameter-object-examples.yaml
@@ -52,6 +52,14 @@ paths:
                   type: number
                 long:
                   type: number
+      - in: cookie
+        name: my_cookie1
+        style: form
+        schema: {}
+      - in: cookie
+        name: my_cookie2
+        style: cookie
+        schema: {}
   /user:
     parameters:
       - in: querystring
