these two xml properties are now deprecated; harmonize spec language

--- a/src/schemas/validation/meta.yaml
+++ b/src/schemas/validation/meta.yaml
@@ -74,8 +74,10 @@ $defs:
         type: string
       attribute:
         type: boolean
+        deprecated: true
       wrapped:
         type: boolean
+        deprecated: true
     type: object
     dependentSchemas:
       nodeType:
