the "example" keyword is now deprecated

--- a/src/schemas/validation/meta.yaml
+++ b/src/schemas/validation/meta.yaml
@@ -15,7 +15,8 @@ type:
 properties:
   discriminator:
     $ref: '#/$defs/discriminator'
-  example: true
+  example:
+    deprecated: true
   externalDocs:
     $ref: '#/$defs/external-docs'
   xml:
