--- a/tests/schema/pass/non-oauth-scopes.yaml
+++ b/tests/schema/pass/non-oauth-scopes.yaml
@@ -1,10 +1,12 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: Non-oAuth Scopes example
   version: 1.0.0
 paths:
   /users:
     get:
+      responses:
+        x-none: true
       security:
         - bearerAuth:
             - 'read:users'
