--- a/tests/schema/pass/server_enum_empty.yaml
+++ b/tests/schema/pass/server_enum_empty.yaml
@@ -1,6 +1,6 @@
-openapi: 3.1.0
+openapi: 3.0.0
 
-# this example should fail as the server variable enum is empty, and so does not contain the default value
+# the server variable enum SHOULD contain the default value, but it doesn't have to
 
 info:
   title: API
@@ -11,4 +11,4 @@ servers:
       var:
         enum: []
         default: a
-components: {}
+paths: {}
