--- a/.github/workflows/validate-markdown.yaml
+++ b/.github/workflows/validate-markdown.yaml
@@ -13,21 +13,20 @@ on: [push, pull_request]
 
 jobs:
   lint:
-
     runs-on: ubuntu-latest
 
     steps:
-  
-    - uses: actions/checkout@v5 # checkout repo content
-      with:
-        fetch-depth: 0
+      - uses: actions/checkout@v5 # checkout repo content
 
-    - uses: actions/setup-node@v5 # setup Node.js
-      with:
-        node-version: '20.x'
+      - uses: actions/setup-node@v5 # setup Node.js
+        with:
+          node-version: "20.x"
 
-    - name: Lint work-in-progress spec
-      run: npx --yes markdownlint-cli2 --config spec.markdownlint.yaml src/oas.md
+      - name: Lint work-in-progress spec
+        run: npx --yes markdownlint-cli2 --config spec.markdownlint.yaml src/oas.md
 
-    - name: Lint other files
-      run: npx --yes markdownlint-cli2 *.md
+      - name: Lint other files
+        run: npx --yes markdownlint-cli2 *.md
+
+      - name: Check links in markdown files
+        run: npx --yes @umbrelladocs/linkspector check
