--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build-src": "npm run validate-markdown && bash ./scripts/md2html/build.sh src && bash ./scripts/schema-publish.sh src",
     "test": "c8 --100 vitest run --coverage",
     "format-markdown": "npx markdownlint-cli2 --config spec.markdownlint.yaml --fix src/oas.md && npx markdownlint-cli2 --fix *.md",
-    "validate-markdown": "npx markdownlint-cli2 --config spec.markdownlint.yaml src/oas.md && npx markdownlint-cli2 *.md"
+    "validate-markdown": "npx markdownlint-cli2 --config spec.markdownlint.yaml src/oas.md && npx markdownlint-cli2 *.md && npx linkspector check"
   },
   "dependencies": {
     "cheerio": "^1.1.2",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@hyperjump/json-schema-coverage": "^1.1.1",
+    "@umbrelladocs/linkspector": "^0.4.7",
     "@vitest/coverage-v8": "^3.2.4",
     "c8": "^10.1.3",
     "markdownlint-cli2": "^0.18.1",
