ci: adds conditions to avoid jobs which depends on tokens to run on forks

--- a/.github/workflows/sync-main-to-dev.yaml
+++ b/.github/workflows/sync-main-to-dev.yaml
@@ -15,6 +15,7 @@ on:
 
 jobs:
   sync-branch:
+    if: github.repository == 'OAI/OpenAPI-Specification'
     runs-on: ubuntu-latest
     steps:
       - name: Generate access token
