Diff local head with remote base branch

--- a/.github/workflows/check-restricted-files.yaml
+++ b/.github/workflows/check-restricted-files.yaml
@@ -46,6 +46,6 @@ jobs:
 
           echo This PR contains changes to files that should not be changed:
           echo
-          git diff --compact-summary origin/${{ github.event.pull_request.base.ref }} origin/${{ github.event.pull_request.head.ref }} -- versions/
+          git diff --compact-summary origin/${{ github.event.pull_request.base.ref }} -- versions/
 
           exit 1
