Update workflow name to include author name mouhssin hafid
Signed-off-by: Mouhssin hafid <mouhssin1995hafid@gmail.com>

--- a/.github/workflows/respec.yaml
+++ b/.github/workflows/respec.yaml
@@ -1,4 +1,4 @@
-name: respec
+name: respec mouhssin hafd
 
 # author: @MikeRalphson
 # issue: https://github.com/OAI/OpenAPI-Specification/issues/1564
