--- a/tests/schema/pass/callback-object-examples.yaml
+++ b/tests/schema/pass/callback-object-examples.yaml
@@ -28,3 +28,5 @@ components:
           responses:
             '200':
               description: callback successfully processed
+  schemas:
+    SomePayload: {}
