fix broken $refs

--- a/tests/schema/pass/media-type-examples.yaml
+++ b/tests/schema/pass/media-type-examples.yaml
@@ -3,6 +3,12 @@ openapi: 3.1.0
 info:
   title: API
   version: 1.0.0
+components:
+  examples:
+    frog-example: {}
+  schemas:
+    Address: {}
+    Pet: {}
 paths:
   /something:
     put:
