--- a/tests/schema/pass/response-object-examples.yaml
+++ b/tests/schema/pass/response-object-examples.yaml
@@ -40,3 +40,5 @@ components:
             type: integer
     no-return-value:
       description: object created
+  schemas:
+    VeryComplexType: {}
