--- a/tests/schema/pass/path-item-object-example.yaml
+++ b/tests/schema/pass/path-item-object-example.yaml
@@ -2,6 +2,10 @@ openapi: 3.1.0
 info:
   title: API
   version: 1.0.0
+components:
+  schemas:
+    Pet: {}
+    ErrorModel: {}
 paths:
   /pets/{id}:
     get:
