restore "propertyName" as required in the discriminator object
Erroneously removed in PR#4966.

--- a/src/schemas/validation/meta.yaml
+++ b/src/schemas/validation/meta.yaml
@@ -34,6 +34,8 @@ $defs:
         type: string
       propertyName:
         type: string
+    required:
+      - propertyName
     type: object
     unevaluatedProperties: false
 
