--- a/tests/schema/fail/discriminator-object-unexpected-property.yaml
+++ b/tests/schema/fail/discriminator-object-unexpected-property.yaml
@@ -7,4 +7,5 @@ components:
     discriminator-with-unevaluated-properties:
       type: object
       discriminator:
+        propertyName: foo
         not-allowed: here
